--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <dependency>
             <groupId>com.walterwhites.library</groupId>
+            <artifactId>business</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.walterwhites.library</groupId>
             <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
