--- a/batch/src/main/resources/application.properties
+++ b/batch/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.batch.initialize-schema=always
