--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -29,7 +29,10 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 spring.main.allow-bean-definition-overriding=true
+
+# Session users
+spring.session.timeout=1200
+
 debug=false
 trace=false
