--- a/batch_email/pom.xml
+++ b/batch_email/pom.xml
@@ -44,6 +44,25 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.walterwhites.library</groupId>
+            <artifactId>webservice</artifactId>
+            <type>jar</type>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.walterwhites.library</groupId>
+            <artifactId>business</artifactId>
+            <type>jar</type>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web-services</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
