--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -62,17 +62,38 @@
                 <executions>
                     <execution>
                         <id>xjc</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>xjc</goal>
                         </goals>
+                        <configuration>
+                            <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+                            <outputDirectory>${project.parent.basedir}/business/src/main/java/</outputDirectory>
+                            <packageName>library.io.github.walterwhites</packageName>
+                            <schemaFiles>books.xsd</schemaFiles>
+                            <readOnly>true</readOnly>
+                            <verbose>true</verbose>
+                            <extension>true</extension>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>xjc2</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+                            <outputDirectory>${project.parent.basedir}/business/src/main/java/</outputDirectory>
+                            <packageName>library.io.github.walterwhites.loans</packageName>
+                            <schemaFiles>loans.xsd</schemaFiles>
+                            <readOnly>true</readOnly>
+                            <clearOutputDir>false</clearOutputDir>
+                            <verbose>true</verbose>
+                            <extension>true</extension>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
-                    <outputDirectory>${project.parent.basedir}/business/src/main/java/</outputDirectory>
-                    <packageName>library.io.github.walterwhites</packageName>
-                    <clearOutputDir>false</clearOutputDir>
-                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>com.sun.activation</groupId>
