--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -86,6 +86,23 @@
                         <configuration>
                             <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
                             <outputDirectory>${project.parent.basedir}/business/src/main/java/</outputDirectory>
+                            <packageName>library.io.github.walterwhites.client</packageName>
+                            <schemaFiles>client.xsd</schemaFiles>
+                            <clearOutputDir>false</clearOutputDir>
+                            <readOnly>true</readOnly>
+                            <verbose>false</verbose>
+                            <extension>true</extension>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>xjc3</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+                            <outputDirectory>${project.parent.basedir}/business/src/main/java/</outputDirectory>
                             <packageName>library.io.github.walterwhites.loans</packageName>
                             <schemaFiles>loans.xsd</schemaFiles>
                             <readOnly>true</readOnly>
